fixed background image on portfolio
background image on portfolio page was stretched, I added a
background-size to css and it seems to have fixed things.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
 	font-family: helvetica;
 	background-image: url("../images/background.jpg");
 	background-size:cover;
+	background-size: 1200px;
 }
 
 
@@ -77,7 +78,6 @@ h3{
 
 #experience{
 	width: 800px;
-	height: 1200;
 	background-color: white;
 	border-radius: 10px;
 	padding-left: 50px;
